# rmanage

./: ChangeLog  Makefile.am  Makefile.in  ProjectHome.md  configure.in  rmanage.gladep
data/: rmanage.cnf
po/: de.gmo
src/: Makefile.in  interface.h  utility.c
trunk/: AUTHORS  INSTALL  README  aclocal.m4  configure  rmanage.glade
trunk/data/: Makefile.am  Makefile.in  rmanage.desktop
trunk/po/: ChangeLog  de.po  rmanage.pot
trunk/src/: Makefile.am  callbacks.c  callbacks.h  interface.c  main.c  netdisc.h
